# ChangeLog for dev-python/pyudev
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyudev/ChangeLog,v 1.28 2014/08/25 15:01:01 mrueg Exp $

  25 Aug 2014; Manuel Rüger <mrueg@gentoo.org> pyudev-0.16.1-r1.ebuild:
  Mark stable on amd64.

  09 Aug 2014; Andreas Schuerch <nativemad@gentoo.org> pyudev-0.16.1-r1.ebuild:
  x86 stable, see bug 516530

  01 Aug 2014; Markus Meier <maekke@gentoo.org> pyudev-0.16.1-r1.ebuild:
  arm stable, bug #516530

  10 Feb 2014; Samuli Suominen <ssuominen@gentoo.org> -pyudev-0.11.ebuild,
  -pyudev-0.12.ebuild, -pyudev-0.13.ebuild, -pyudev-0.15.ebuild:
  old

  04 Oct 2013; Mike Frysinger <vapier@gentoo.org> pyudev-0.16.1-r1.ebuild,
  pyudev-0.16.1.ebuild:
  Add arm love.

  13 Aug 2013; Patrick McLean <chutzpah@gentoo.org> pyudev-0.16.1-r1.ebuild:
  Add python3_3 to PYTHON_TARGETS, disabling the pyside dep for 3.3.

  02 Aug 2013; Michał Górny <mgorny@gentoo.org> pyudev-0.16.1-r1.ebuild:
  Add missing dep on pytest.

*pyudev-0.16.1-r1 (26 Jul 2013)

  26 Jul 2013; Michał Górny <mgorny@gentoo.org> +pyudev-0.16.1-r1.ebuild:
  Convert to distutils-r1.

  21 Jul 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due #92799

  14 May 2013; Agostino Sarubbo <ago@gentoo.org> pyudev-0.16.1.ebuild:
  Stable for x86, wrt bug #469474

  12 May 2013; Agostino Sarubbo <ago@gentoo.org> pyudev-0.16.1.ebuild:
  Stable for amd64, wrt bug #469474

  28 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> pyudev-0.11.ebuild,
  pyudev-0.12.ebuild, pyudev-0.13.ebuild, pyudev-0.15.ebuild,
  pyudev-0.16.1.ebuild:
  Use virtual/udev instead of sys-fs/udev wrt #444398

  03 Nov 2012; Ian Delaney <idella4@gentoo.org> pyudev-0.16.1.ebuild:
  test phase returned in working order; fixes bug #423483

*pyudev-0.16.1 (27 Aug 2012)

  27 Aug 2012; Patrick Lauer <patrick@gentoo.org> +pyudev-0.16.1.ebuild:
  Bump for #429490

  29 Apr 2012; Markus Meier <maekke@gentoo.org> pyudev-0.15.ebuild: