@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST pyudev-0.16.1.tar.gz 74953 SHA256 765d1c14bd9bd031f64e2612225621984cb2bbb8cbc0c03538bcc4c735ff1c95 SHA512 7f62c6794027411583f874bdf746de457f19048955867d30008bc1ee0d30040a97f73b9e52ae3645d469fc401128703d4e703e294b85481e927ffaba27e45e6a WHIRLPOOL 4c366a1eed92bf274ef84eab6242beb09cd6e906556f6ccb24113fafec2dcc47b8da94487505473fc6f7b39539cdc2809cef2d07a1ab8c0616fc73efba9b2e1a
-EBUILD pyudev-0.16.1-r1.ebuild 2056 SHA256 812f3c33848c4009008c1bda9ba3f4f12edd60b774c791a00e18948cc910f4ba SHA512 d78da48af3456e0a9a44bf1ac1867d9e7e2edfdced3e4b3ea9362d9610746d86763b4db6213f083304e3143774e721a502a881854ea8de3de6ab913c9ee128b8 WHIRLPOOL dd6d9f02a285c7cbe47fc2f060f52c27402408e99f4d918680a576a0c2438d38ce217de9b5e12ba44ee799a9a855c84827bb98f35423084afa101698e3bdbcb7
+EBUILD pyudev-0.16.1-r1.ebuild 2051 SHA256 2a4e8448d82acf0502181e444a0b5973a35514acb27a099902abf4434e230668 SHA512 c0f92414113d5ad96bc4aa2d64c05173e34a4e17ffa52708769ef1a967758ad1b7fe50f3ae44bf2e8281d0a3c275a52e5b1376532f53acb524dc7525a58b9665 WHIRLPOOL 023d51dd3fa7323d8298b134d374a3c4701c0b17bdcf2b59da45c024f35b98216253f33a784e9aab67894540ce066c5c31f978be7545968453a7c24d88c5ab7f
 EBUILD pyudev-0.16.1.ebuild 1673 SHA256 d52672076bed62978b90406620e0f0e2cba78b0dda0e317f626ad02512115c3d SHA512 e842832f03c2a1719ff5800d917f3f175f3778d83660f9d991c30cb4d08079dcd32779453908ee2a79cf6bc46891ca8309c274ceb88a026d061c3c95bcf103ac WHIRLPOOL 491f1125104ce220d07f12043637147bc2a4256142a7c67c2953f785de4421bde345926d4af776c0aae5c3a2af37205b6fbe398c9e498391ec2ccacb9b6567eb
-MISC ChangeLog 3900 SHA256 d1af567582e6ee946728ec2e4d1596fe0233733432cdf42c92e1c3d3dd82b936 SHA512 82a304cc34e721971887c5995f31c52d855f0eabd634260a977ab1659ed32ea9b060af2b1c013ac05fed49af9c0b31f4048f22645a29ba93d8899fabbbc1e605 WHIRLPOOL 8ee84cc516215ccad89eaba8ce339545d8832a605f0d2b4f4b45c768e5ac68c094b7579ef986932041b8d81fcf468612bee3e07a9a9b5ea878e71faacf8732ae
+MISC ChangeLog 4031 SHA256 7aa3ed1994713cd9222872a195485483031e14f3e6da6d3b784bed959470579f SHA512 b196d10af2de6e2f97e7e43dfa3992416b3990d18e8dbeb8785d11ded7405103f7c8bd575c6f3e84eb7c718f8eab10fca664d6ae90148119f1f5afb261c91877 WHIRLPOOL e6b6c8648a2bd0b89d112bc8483e2bf50196c05f2fec855f4c4c9c099541baef83ad55c951e248319be85f5148677070884f362971d14fb223aeeaad68be74e2
 MISC metadata.xml 566 SHA256 e20659e54da0e047bca6451dda7ccb4bc6dce28a4f6a29a6779db70fc8955ab6 SHA512 e414dedf83ec9a3858210c8a31a8aa76ad52f85447c8d3f60b5b610c1b483100fb3888346245f0f16feb2cfc20c404107a21f46ed871ae062ede27ebdfca2e7f WHIRLPOOL 218b42102d8649afb798311e9cebbc2e2d74d21edf35e484beb50cb57845db5d02a925bd2189320c41f79944c7e35a4c4c8ceb77853932240f6d2e16ed720054
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlQqPbIACgkQso7CE7gHKw1SFACgwZQvynyOgGW5SH+TuDpz2wQ9
+8IoAoMSlaT4L5jKYkWTCBw230gxTG9X4
+=2O8m
+-----END PGP SIGNATURE-----
