@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyudev
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyudev/ChangeLog,v 1.28 2014/08/25 15:01:01 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyudev/ChangeLog,v 1.29 2014/09/30 05:30:23 idella4 Exp $
+
+  30 Sep 2014; Ian Delaney <idella4@gentoo.org> pyudev-0.16.1-r1.ebuild:
+  update HOMEPAGE and PYTHON_COMPAT, fixes Bug #523006
 
   25 Aug 2014; Manuel Rüger <mrueg@gentoo.org> pyudev-0.16.1-r1.ebuild:
   Mark stable on amd64.
